
syntax = "proto3";

import "google/protobuf/any.proto";

package flow;

service FlowService {
    rpc RouteFlow(stream RouteFlowRequest) returns (stream RouteFlowResponse) {}
}

message ErrorStatus {
    string message = 1;
    repeated google.protobuf.Any details = 2;
}

message RouteFlowRequest {
    message Execute {
        string app = 1;
    }

    int32 seq = 1;
    oneof route_request {
        Execute exec = 2;
    }
}

message RouteFlowResponse {
    int32 seq = 1;
    oneof resp {
        ErrorStatus error = 2;
    }
}